--- a/src/pages/navfoot/Navbar.css
+++ b/src/pages/navfoot/Navbar.css
@@ -1,57 +1,93 @@
-/* Navbar.css */
-.menu-btn {
-    font-size: 30px;
-    cursor: pointer;
-    border: none;
-    background: none;
+.navbar-container {
+    display: flex;
+    position: relative;
+    height: 60px;
+    background-color: #08065a;
+    align-items: center;
 }
 
-.navbar {
-    height: 100%;
-    width: 0;
+.menu-icon {
     position: fixed;
-    z-index: 1;
+    right: 20px;
+    font-size: 28px;
+    color: #fff;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 1001;
+}
+
+.menu {
+    position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.9);
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-}
-
-.navbar.open {
     width: 100%;
+    height: 100%;
+    background-color: #08065a;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    z-index: 1000;
 }
 
-.navbar .close-btn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 40px;
-    cursor: pointer;
-    border: none;
-    background: none;
-    color: white;
+.menu.open {
+    transform: scaleY(1);
 }
 
-.navbar ul {
+.menu.closed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #08065a;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.menu ul {
     list-style-type: none;
     padding: 0;
-}
-
-.navbar ul li {
-    padding: 8px 0;
+    margin: 0;
+    width: 100%;
     text-align: center;
 }
 
-.navbar ul li a {
-    color: white;
-    font-size: 25px;
-    text-decoration: none;
-    display: block;
-    transition: 0.3s;
+.menu ul li {
+    margin-bottom: 20px;
 }
 
-.navbar ul li a:hover {
+.menu ul li a {
+    display: block;
+    padding: 15px 30px;
+    font-size: 24px;
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s;
+}
+
+.menu ul li a:hover {
     color: #f1f1f1;
+}
+
+.navbar-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    z-index: 1001;
+}
+
+.sticky-nav {
+    position: sticky;
+    top: 0;
 }
