--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,36 +1,27 @@
 .home-page {
     background-color: #1a0b8b;
+    width: 100vw;
 }
-
-.home-page h3 {
-    font-family: "Nasalization", sans-serif;
-    color: blue;
-    font-size: 2rem;
-  }
 
 .cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin-top: 2rem;
     justify-content: space-evenly;
     justify-items: center;
 }
 
 .card-main {
-    width: 23vh;
-    padding: 2vh;
+    width: 23v;
+    padding: 2rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
 @media only screen and (max-width: 1000px) {
-    .resourcesbox {
-        grid-template-columns: repeat(2, 1fr);
-    }
     .card-main {
-        width: 48vh;
-        padding: 2vh;
+        width: 48vw;
+        padding: 2vw;
     }
 }
 
@@ -39,8 +30,7 @@
         grid-template-columns: repeat(1, 1fr);
     }
     .card-main {
-        width: 90vh;
-        padding: 5vh;
+        width: 90vw;
+        padding: 5vw;
     }
 }
-
