--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,36 +1,45 @@
 .home-page {
-    background-color: #1a0b8b;
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: xx-large;
+    color: #fff1f1;
+    background-color: #010100;
+    text-align: center;
+    padding: 5vw;
+    height: calc(100vh - 60px);
 }
 
 .cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    justify-content: space-evenly;
-    justify-items: center;
+    text-align: center;
+    position: relative;
 }
 
 .card-main {
-    width: 23v;
-    padding: 2rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    width: 20vw;
+    object-fit: cover;
+    justify-self: center;
+    position: relative;
+    margin-bottom: 5vw;
+    align-content: center;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
     .card-main {
-        width: 48vw;
-        padding: 2vw;
+        width: 40vw;
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .cards {
         grid-template-columns: repeat(1, 1fr);
     }
     .card-main {
-        width: 90vw;
-        padding: 5vw;
+        width: 80vw;
     }
 }
