--- a/src/pages/Home/Hover.css
+++ b/src/pages/Home/Hover.css
@@ -1,5 +1,4 @@
 .teamsleft {
-    width: 32vw;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -8,9 +7,6 @@
   }
   
   .achievementleft {
-    width: 32vw;
-    max-width: 430px;
-    height: 30vh;
     border-radius: 10px;
     display: flex;
     background-color: #012147;
@@ -26,8 +22,6 @@
   
   .front-card {
     display: flex;
-    width: 100%;
-    height: 100%;
     backface-visibility: hidden;
     padding: 1rem;
     justify-content: space-around;
@@ -40,8 +34,6 @@
     display: flex;
     position: absolute;
     justify-content: space-around;
-    width: 100%;
-    height: 100%;
     backface-visibility: hidden;
     background-color: #2830b5;
     transform: rotateY(180deg);
@@ -53,6 +45,7 @@
   .achievementleft span {
     color: rgb(255, 255, 255);
     font-family: "Poppins", sans-serif;
-    display: grid;
     align-self: center;
+    overflow-wrap: break-word;
+    white-space: normal;
   }
