--- a/src/pages/navfoot/Navbar.css
+++ b/src/pages/navfoot/Navbar.css
@@ -2,9 +2,19 @@
     display: flex;
     position: relative;
     height: 60px;
-    background-color: #08065a;
     align-items: center;
     width: 100vw;
+}
+
+.logo img {
+    position: fixed;
+    left: 20px;
+    width: 45px;
+    color: #fff;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 1001;
 }
 
 .menu-icon {
@@ -43,8 +53,6 @@
 
 .menu.closed {
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 60px;
     background-color: #08065a;
@@ -52,7 +60,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1000;
 }
 
 .menu ul {
@@ -78,17 +85,4 @@
 
 .menu ul li a:hover {
     color: #f1f1f1;
-}
-
-.navbar-title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    z-index: 1001;
-}
-
-.sticky-nav {
-    position: sticky;
-    top: 0;
 }
