--- a/src/pages/navfoot/Navbar.css
+++ b/src/pages/navfoot/Navbar.css
@@ -1,6 +1,6 @@
 .navbar-container {
     display: flex;
-    position: relative;
+    position: fixed;
     height: 60px;
     align-items: center;
     width: 100vw;
@@ -60,6 +60,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1000;
 }
 
 .menu ul {
