--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -58,4 +58,10 @@
   background-color: #3e8e41;
 }
 
-  
+.entry-button {
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #eee;
+}
