--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -1,27 +1,34 @@
 .profile-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  width: 300px;
+  width: 100%;
+  height: 100vh;
 }
+
+.home{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 
 .profile {
-  width: 100px;
-  height: 100px;
+  width: 70%;
+  height: 70%;
   border-radius: 50%;
-  margin-bottom: 20px;
-}
-
-.profile-info {
-  text-align: center;
+  position: relative;
+  top: -10vw;
 }
 
 .username {
   font-size: 1.5em;
-  margin-bottom: 5px;
+  position: relative;
+  top: -10vw;
+  margin-bottom: 10px;
 }
 
 .earned-tokens {
@@ -29,11 +36,34 @@
   color: #333;
 }
 
+.btn{
+  height: 35px;
+  width: 100px;
+  border-radius: 5px;
+  position: relative;
+  top: -10vw;
+  /* margin-top: 10px; */
+  background-color: transparent;
+  color: black;
+  border: 2px solid lightcoral;
+  font-size: 11px;
+  font-weight: 700;
+  cursor: pointer;
+  padding-top: 8px;
+}
+
+.btn:hover{
+  color: black;
+  background-color: lightcoral;
+  box-shadow: 2px 2px 2px lightcoral;
+}
 
 .entry-button {
-  padding: 10px 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  position: relative;
+  top: -22vw;
+  padding: 8px 20px;
   cursor: pointer;
-  background-color: #eee;
+  margin: 20px;
+  font-size: 12px;
+  z-index: 1;
 }
