--- a/src/pages/Connect/Connect.css
+++ b/src/pages/Connect/Connect.css
@@ -108,7 +108,7 @@ textarea.input {
   transform: translateY(0);
 }
 
-.btn {
+.btn-connect {
   padding: 0.6rem 1.3rem;
   background: linear-gradient(45deg, #3e1d59, #1e2b51);
   border: 2px solid #fafafa;
@@ -122,7 +122,7 @@ textarea.input {
   margin: 0;
 }
 
-.btn:hover {
+.btn-connect:hover {
   background-color: transparent;
   color: #fff;
 }
@@ -283,7 +283,7 @@ a{
     padding: 0.45rem 1.2rem;
   }
 
-  .btn {
+  .btn-connect {
     padding: 0.45rem 1.2rem;
   }
 }
