--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -7,11 +7,14 @@
     background-color: #010100;
     text-align: center;
     padding-top: 5vh;
-    height: calc(100vh - 60px);
+    height: 100vh;
 }
 
 .cores p {
     font-family: 'DreamAvenue';
+    font-size: 4rem;
+    color: #fff1f1;
+    font-weight: 700;
 }
 
 .cores-photo {
@@ -56,6 +59,7 @@
 .overlay p{
     font-size: 1.35rem;
     margin-top: 0.5rem;
+    font-weight: 200;
 }
 
 
