--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,6 @@
 .home-page {
     display: flex;
     flex-direction: column;
-    font-family: 'Poppins';
     font-size: xx-large;
     color: #fff1f1;
     background: linear-gradient(45deg, #3e1d59, #1e2b51);
@@ -15,12 +14,20 @@
     aspect-ratio: 1.77;
 }
 
+.home-page .cards-title h1 {
+    font-size: '5rem';
+    padding-top: '50px';
+    font-family: 'DreamAvenue';
+}
+
 .cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
     position: relative;
     padding: 8vw;
+    gap: 50px;
+    align-items: center;
 }
 
 .card-main {
@@ -37,9 +44,6 @@
 @media only screen and (max-width: 1200px) {
     .cards {
         grid-template-columns: repeat(2, 1fr);
-    }
-    .card-main {
-        width: 80vw; 
     }
 }
 
