--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,6 +1,6 @@
 /* src/assets/fonts/fonts.css */
 @font-face {
-    font-family: 'Dream Avenue';
+    font-family: 'DreamAvenue';
     src: url('./DreamAvenue.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -14,5 +14,5 @@
 }
 
 body {
-    font-family: 'Dream Avenue', sans-serif; /* Default font */
+    font-family: 'DreamAvenue', sans-serif;
 }
