--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -25,7 +25,7 @@
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
     position: relative;
-    padding: 8vw;
+    padding: 5vw;
     gap: 50px;
     align-items: center;
 }
@@ -45,9 +45,12 @@
     .cards {
         grid-template-columns: repeat(2, 1fr);
     }
+    .card-main {
+        width: 40vw; 
+    }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 400px) {
     .cards {
         grid-template-columns: repeat(1, 1fr);
     }
