--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -1,19 +1,11 @@
-.profile-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(45deg, #3e1d59, #1e2b51);
+body {
+  background: #f5f5f5;
+  margin-top: 20px;
 }
 
-.home{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.ui-w-80 {
+  width: 80px !important;
+  height: auto;
 }
 
 .btn-default {
