--- a/src/pages/Account/LogIn.css
+++ b/src/pages/Account/LogIn.css
@@ -1,8 +1,8 @@
-.signin {
+.login {
     background: linear-gradient(45deg, #3e1d59, #1e2b51);
 }
 
-.signin a {
+.login a {
     text-decoration: none;
     cursor: default;
   } 
