--- a/src/pages/Account/LogIn.css
+++ b/src/pages/Account/LogIn.css
@@ -11,7 +11,7 @@
     background: #fff;
     box-shadow: 0 0 20px 0 #0003, 0 5px 5px 0 #0000003d;
     margin: 0 auto 100px;
-    max-width: 360px;
+    max-width: 70vw;
     padding: 45px;
     position: relative;
     text-align: center;
@@ -20,12 +20,12 @@
   
   .container-sign-in button {
     border-radius: 15px;
-    background-color: #522d47;
+    background: linear-gradient(45deg, #3e1d59, #1e2b51);
     padding: 10px 20px;
     color: #f1c7e5;
     text-decoration: none;
-    max-width: 360px;
-    width: 40vw;
+    max-width: 70vw;
+    width: 30vw;
     margin: 2%;
   }
   
