--- a/src/pages/Account/LogIn.css
+++ b/src/pages/Account/LogIn.css
@@ -1,9 +1,19 @@
-.login {
+.logincont {
     background: linear-gradient(45deg, #3e1d59, #1e2b51);
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+}
+
+.logincont h2 {
+    font-size: 5rem;
+    padding-top: 60px;
+    color: #fff;
 }
 
 .login a {
     text-decoration: none;
+    color: #1e2b51;
     cursor: default;
   } 
   
@@ -15,7 +25,6 @@
     padding: 45px;
     position: relative;
     text-align: center;
-    z-index: 1;
   }
   
   .container-sign-in button {
