--- a/src/pages/Earn/Earn.css
+++ b/src/pages/Earn/Earn.css
@@ -7,7 +7,9 @@
     display: flex;
     align-items: center;
 }
-
+.container {
+    background: none;
+}
 .myProjects .my{
     font-weight: 700;
     font-size: 80px;
